# clawn_raspberry_pi

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  config.md  llm.md  queue.md  release.md  security.md  tools.md  workspace.md
examples/: config.example.json  sample_plan.json
examples/workspace/: AGENTS.md  BOOT.md  BOOTSTRAP.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
examples/workspace/memory/: 2026-02-25.md
src/saferclaw/: __init__.py  agent.py  cli.py  config.py  executor.py  llm.py  policy.py  queue.py  workspace.py
