[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "saferclaw"
version = "0.1.0"
description = "A smaller, safer local automation agent with strict allowlist policy."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Contributors", email = "opensource@example.com" }
]
keywords = [
  "automation",
  "safe-execution",
  "raspberry-pi",
  "agent"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX"
]

[project.urls]
Homepage = "https://github.com/base60s/clawn_raspberry_pi"
Repository = "https://github.com/base60s/clawn_raspberry_pi"
Documentation = "https://github.com/base60s/clawn_raspberry_pi/blob/main/README.md"

[project.scripts]
saferclaw = "saferclaw.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
